<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.RegisterActivity">

  <EditText
      android:id="@+id/firstName"
      android:layout_width="360dp"
      android:layout_height="55dp"
      android:layout_marginTop="228dp"
      android:hint="@string/firstName_hint"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/lastName"
      android:layout_width="365dp"
      android:layout_height="42dp"
      android:layout_marginTop="32dp"
      android:hint="@string/lastName_hint"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.586"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/firstName" />

  <EditText
      android:id="@+id/email"
      android:layout_width="363dp"
      android:layout_height="49dp"
      android:layout_marginTop="44dp"
      android:hint="@string/email_hint"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.627"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/lastName" />

  <EditText
      android:id="@+id/password"
      android:layout_width="365dp"
      android:layout_height="42dp"
      android:layout_marginTop="36dp"
      android:hint="@string/password_hint"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.652"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/email" />

  <Button


      android:id="@+id/registerButton"
      android:layout_width="198dp"
      android:layout_height="49dp"
      android:text="@string/register"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password"
      app:layout_constraintVertical_bias="0.181" />

</androidx.constraintlayout.widget.ConstraintLayout>