<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.kidwise.CustomClockView
        android:id="@+id/analog_clock"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@id/analog_clock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textview_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_time_is_it"
        android:layout_below="@id/button_next"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="233dp"
        android:layout_height="68dp"
        android:layout_below="@id/analog_clock"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="78dp"
        android:hint="@string/enter_answer" />



</RelativeLayout>