<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Position the question TextView at the top center -->
    <TextView
        android:id="@+id/multiplicationQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/question"
        android:textSize="40sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/answerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/answerField"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/enter_your_answer"
            android:inputType="number" />

        <Button
            android:id="@+id/submitAnswerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answerField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:onClick="checkAnswer"
            android:text="@string/submit" />
    </RelativeLayout>

</RelativeLayout>
