<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/remember_the_digits_from_beginning_to_end"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/instructionTextView"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:inputType="number" />


    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_below="@id/answerEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/submitAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/answerEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="gone" />



</RelativeLayout>
